fix: not widely supported text-wrap

--- a/workspaces/js/css/template.css
+++ b/workspaces/js/css/template.css
@@ -64,7 +64,7 @@
   font-size: var(--flows-base-font-size);
   line-height: var(--flows-base-line-height);
   font-weight: 600;
-  text-wrap: nowrap;
+  white-space: nowrap;
   text-decoration: none;
 }
 .flows-primary-btn {
